--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,10 @@
 	}
 /*hero*/
 	section.hero{
+		min-height:100px;
 		max-height:600px;
+		height:60%;
 		width:100%;
-
 	}
 /*> navigation*/
   nav.site{
@@ -22,11 +23,14 @@
 		width:100%;
 		background:#fff;
 		box-sizing:border-box;
-
+		position:fixed;
+		top:0;
+		left:0;
   }
 	nav.site h1{
 		display:inline-block;
 		float:left;
+		color:#000;
 		font-size:2em;
 		font-family:'Lato-Black';
 	}
