--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,5 +1,5 @@
 {{! navigation template}}
-<nav class="site">
+<nav id="site-nav">
   <div class="Container-Large">
     <h1>{{@blog.title}}</h1>
     <ul>
