Styling for Shim

--- a/index.hbs
+++ b/index.hbs
@@ -1,2 +1,5 @@
 {{!< default}}
-{{! index template, this is for home.}}
+{{! index template, this is for home}}
+<section id="site-shim" class="Container-Medium">
+  {{> "loop"}}
+</section>
