--- a/default.hbs
+++ b/default.hbs
@@ -1,6 +1,8 @@
 {{> "head"}}
 <body class="{{body_class}}">
 	{{> "hero"}}
-	{{body}}
+	{{{body}}}
+	{{> "footer"}}
+	{{ghost_footer}}
 </body>
 </html>
