--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -4,7 +4,7 @@
     <h1>{{@blog.title}}</h1>
     <ul>
       {{#foreach navigation}}
-        <a href="{{url absolute="true"}}"><li>{{label}}</li></a>
+        <a href="{{url absolute='true'}}"><li>{{label}}</li></a>
       {{/foreach}}
     </ul>
   </div>
