Finished shim styling

--- a/index.hbs
+++ b/index.hbs
@@ -1,5 +1,6 @@
 {{!< default}}
 {{! index template, this is for home}}
 <section id="site-shim" class="Container-Medium">
+  asdf
   {{> "loop"}}
 </section>
