--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,9 @@
 	}
 /*> shim*/
 	#site-shim{
+		min-height:400px;
 		width:100%;
-		background:rgba(187, 187, 187, 0.9);
+		background:#fff;
+		box-shadow: 0px 0px 10px #000;
+		z-index:9999;
 	}
