--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,3 +56,15 @@
 		box-shadow: 0px 0px 10px #000;
 		z-index:9999;
 	}
+/*> footer*/
+	#site-footer{
+		margin:0.9em 0;
+		padding:2em 0;
+		box-sizing:border-box;
+	}
+	#site-footer .copyright{
+		float:left;
+	}
+	#site-footer .ghost{
+		float:right;
+	}
