--- a/default.hbs
+++ b/default.hbs
@@ -1,7 +1,9 @@
 {{> "head"}}
 <body class="{{body_class}}">
 	{{> "hero"}}
-	{{{body}}}
+	<section id="site-shim" class="Container-Medium">
+		{{{body}}}
+	</section>
 	{{> "footer"}}
 	{{ghost_footer}}
 </body>
