started working on shimThis.js

--- a/default.hbs
+++ b/default.hbs
@@ -4,6 +4,9 @@
 	<section id="site-shim" class="Container-Medium">
 		{{{body}}}
 	</section>
+	<script>
+	  $("#site-shim").shimThis("section.hero");
+	</script>
 	{{> "footer"}}
 	{{ghost_footer}}
 </body>
