--- a/partials/head.hbs
+++ b/partials/head.hbs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
     <script type="text/javascript" src="{{asset "js/jQuery.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/centerThis.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/shimThis.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/AnchorSlide.js"}}"></script>
     {{ghost_head}}
 </head>
