working on tags

--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -35,6 +35,15 @@
     {{pagination}}
   {{/if}}
 </section>
+{{#is "tag"}}
+  <script>
+    $offset = $("article.loop").first().outerHeight();
+    $("#site-shim").shimThis({
+      ontop: 'section.hero',
+      offset: $offset+'px'
+    });
+  </script>
+{{else}}
 <script>
   $offset = $("article.loop").first().outerHeight();
   $("#site-shim").shimThis({
@@ -42,3 +51,4 @@
     offset: $offset+'px'
   });
 </script>
+{{/is}}
