--- a/tag.hbs
+++ b/tag.hbs
@@ -3,9 +3,9 @@
 {{> "shim"}}
 {{> "loop"}}
 <script>
-  /*$offset = $("article.loop").first().outerHeight();
+  $offset = $("#tag").outerHeight();
   $("#site-shim").shimThis({
     ontop: 'section.hero',
     offset: $offset+'px'
-  });*/
+  });
 </script>
