--- a/index.hbs
+++ b/index.hbs
@@ -1,3 +1,10 @@
 {{!< default}}
 {{! index template, this is for home}}
 {{> "loop"}}
+<script>
+  $offset = $("article.loop").first().outerHeight();
+  $("#site-shim").shimThis({
+    ontop: 'section.hero',
+    offset: $offset+'px'
+  });
+</script>
