--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,5 +1,5 @@
 {{!loop template}}
-<section id="loop">
+<section id="loop" class="shim">
   {{#foreach posts}}
     <article class="loop">
       {{#if image}}
