--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,7 +1,7 @@
 {{! navigation template}}
 <nav id="site-nav">
   <div class="Container-Large">
-    <h1>{{@blog.title}}</h1>
+    <a href="{{@blog.url}}"><h1>{{@blog.title}}</h1></a>
     <ul>
       {{#foreach navigation}}
         <a href="{{url absolute='true'}}"><li>{{label}}</li></a>
