--- a/partials/shim-author.hbs
+++ b/partials/shim-author.hbs
@@ -1,5 +1,5 @@
-<section id="tag" class="shim">
-  {{#tag}}
+<section id="author" class="shim">
+  {{#author}}
     {{#if image}}
       <header class="image" style="background: url({{image}}) no-repeat center center; -webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;">
         <div class="wrapper">
@@ -13,7 +13,7 @@
       </header>
     {{else}}
       {{/if}}
-  {{/tag}}
+  {{/author}}
   <footer>
     <p>{{pagination.total}} posts</p>
   </footer>
