--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,11 +79,15 @@
 		width:100%;
 		background:rgba(20,20,20,0.3);
 	}
+	.shim header .center{
+		display:inline-block;
+	}
 	.shim footer{
 		padding:0.4em 0.6em;
 		position:relative;
 		box-sizing: border-box;
 		display:inline-block;
+		height:54px;
 		width:100%;
 	}
 	.shim footer p{
@@ -104,6 +108,7 @@
 	#tag footer{
 		height:54px;
 	}
+
 /*> loop*/
 	#loop{
 		margin-bottom:11px;
@@ -171,15 +176,15 @@
 		float:left;
 		font-family: 'Lato';
 	}
-	#loop article footer p b{
-		font-family: 'Lato-Black';
-	}
 	#loop article footer p i{
 		opacity:0.6;
 	}
 	#loop article footer .author{
 		display:inline-block;
 		float:left;
+	}
+	#loop article footer .author p a{
+		font-family: 'Lato-Black';
 	}
 	#loop article footer .tags {
 		margin-top:9px;
