--- a/post.hbs
+++ b/post.hbs
@@ -4,7 +4,17 @@
 {{#post}}
   <section id="post-content">
     {{content}}
-  <section>
+    <section class="featured">
+      <ul>
+        {{#prev_post}}
+          <a href="{{url absolute="true"}}"><li class="prev">previous post</li></a>
+        {{/prev_post}}
+        {{#next_post}}
+          <a href="{{url absolute="true"}}"><li class="next">next post</li></a>
+        {{/next_post}}
+      </ul>
+    </section>
+  </section>
 {{/post}}
 <script>
   $offset = $("#post").outerHeight();
