--- a/partials/shim-post.hbs
+++ b/partials/shim-post.hbs
@@ -8,6 +8,12 @@
           </div>
         </div>
       </header>
+      {{else}}
+        <header>
+          <div class="bottom">
+            <h1>{{title}}</h1>
+          </div>
+        </header>
     {{/if}}
     <footer>
       <div class="left">
