--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@
 	.shim header{
 		box-sizing: border-box;
 		position:relative;
+		background:#fff;
 	}
 	.shim header h1{
 		font-family:'Lato-Bold';
@@ -67,14 +68,20 @@
 	.shim header p{
 		opacity:0.6;
 	}
+	.shim header .wrapper{
+		padding:0.6em;
+		height:100%;
+		width:100%;
+	}
 	.shim header.image{
 		padding:0;
 		height:360px;
+		box-sizing:border-box;
 		color:#fff;
 	}
-	.shim header .wrapper{
+	.shim header.image .wrapper{
 		padding:0.6em;
-		box-sizing: border-box;
+		box-sizing:border-box;
 		height:100%;
 		width:100%;
 		background:rgba(20,20,20,0.3);
@@ -166,7 +173,8 @@
 		padding:1.6em 0.6em;
 	}
 	#post-content .featured{
-		padding:1em;
+		padding:0.4em 1em;
+		padding-top:2.1em;
 	}
 	#post-content .featured li{
 		font-size:14px;
@@ -175,7 +183,7 @@
 	#post-content .featured .prev{
 		float:left;
 	}
-	#post-content .featured .prev{
+	#post-content .featured .next{
 		float:right;
 	}
 /*> loop*/
@@ -216,9 +224,8 @@
 	#loop article header p{
 		margin-top:16px;
 		color:rgba(255, 255, 255, 0.43);
-		line-height:1.4;
+		line-height:1.6;
 		font-size:1em;
-
 	}
 	#loop article footer{
 		padding:0.4em 0.6em;
