--- a/partials/shim-post.hbs
+++ b/partials/shim-post.hbs
@@ -10,9 +10,9 @@
       </header>
       {{else}}
         <header>
-          <div class="bottom">
-            <h1>{{title}}</h1>
-          </div>
+          <hr/>
+          <h1>{{title}}</h1>
+          <hr class="thick"/>
         </header>
     {{/if}}
     <footer>
