--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,14 +63,14 @@
 		position:relative;
 		background:#fff;
 	}
-	.shim header h1{
+	.shim header.no h1{
 		color:#000;
 		font-family:'Lato-Bold';
 		font-size:4.6em;
 	}
 	.shim header.image h1{
-		font-family:'Lato-Black';
-		font-size:3em;
+		font-family:'Lato-Bold';
+		font-size:2.8em;
 		color:#fff;
 	}
 	.shim header hr{
@@ -102,7 +102,7 @@
 		box-sizing:border-box;
 		height:100%;
 		width:100%;
-		background:rgba(20,20,20,0.3);
+		background:rgba(20,20,20,0.4);
 	}
 	.shim header .center{
 		display:inline-block;
@@ -188,21 +188,26 @@
 		border-bottom:1px solid #999797;
 	}
 	#post-content{
-		padding:1.6em 0.6em;
+		padding:1.1em 0.9em;
+	}
+	#post-content p{
+		margin:1em 0;
+		line-height:1.4;
+		font-size:1.3em;
 	}
 	#post-content .featured{
-		padding:0.4em 1em;
+		padding:0.9em 1em;
 		padding-top:2.1em;
 	}
-	#post-content .featured li{
+	#post-content .featured div{
 		font-size:14px;
 		font-family:'Lato-Black';
 	}
 	#post-content .featured .prev{
-		float:left;
+		float:right;
 	}
 	#post-content .featured .next{
-		float:right;
+		float:left;
 	}
 /*> loop*/
 	#loop{
