--- a/partials/shim-post.hbs
+++ b/partials/shim-post.hbs
@@ -9,7 +9,7 @@
         </div>
       </header>
       {{else}}
-        <header>
+        <header class="noimage">
           <hr/>
           <h1>{{title}}</h1>
           <hr class="thick"/>
