--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,15 +58,12 @@
 		z-index:9999;
 	}
 	.shim header{
-		padding:1em 0.6em;
+		padding:1.6em 0.6em;
 		box-sizing: border-box;
 		position:relative;
-		background:#fff;
-	}
-	.shim header.no h1{
-		color:#000;
-		font-family:'Lato-Bold';
-		font-size:4.6em;
+		width:100%;
+		background:#263238;
+		color:#fff;
 	}
 	.shim header.image h1{
 		font-family:'Lato-Bold';
@@ -103,6 +100,9 @@
 		height:100%;
 		width:100%;
 		background:rgba(20,20,20,0.4);
+	}
+	.shim header.noimage{
+		padding:2em 0.6em;
 	}
 	.shim header .center{
 		display:inline-block;
@@ -181,6 +181,9 @@
 	#author header img{
 		height:54px;
 		width:54px;
+	}
+	#author header.noimage{
+		padding:2em 0.6em;
 	}
 /*> post*/
 	#post footer{
