--- a/partials/shim-tag.hbs
+++ b/partials/shim-tag.hbs
@@ -12,7 +12,12 @@
         </div>
       </header>
     {{else}}
-
+      <header class="noimage">
+        <a href="{{url absolute="true"}}"><h1>{{name}}</h1></a>
+        {{#if description}}
+          <p>{{description}}</p>
+        {{/if}}
+      </header>
     {{/if}}
   {{/tag}}
   <footer>
