--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,7 @@
 	#tag{
 		text-align:center;
 	}
-	#tag .wrapper h1{
+	#tag header h1{
 		display:inline-block;
 	}
 	#tag header.noimage{
@@ -203,6 +203,63 @@
 		margin:1em 0;
 		line-height:1.4;
 		font-size:1.3em;
+	}
+	#post-content img{
+		margin:1.6em auto;
+		height:auto;
+		max-height:600px;
+		max-width:100%;
+		position:relative;
+	}
+	#post-content ul{margin-left:2px;}
+	#post-content ul li{margin-left:5px;position:relative;}
+	#post-content ul li:before{
+		content:'-';
+		left:-4px;
+		position:relative;
+	}
+	#post-content ol{margin-left:10px;list-style:lower-alpha;}
+	#post-content ol li{margin-left:10px;}
+	#post-content h1{font-size:4em;}
+	#post-content h2{font-size:3.7em;}
+	#post-content h3{font-size:3.4em;}
+	#post-content h4{font-size:2.7em;}
+	#post-content h5{font-size:2.4em;}
+	#post-content h6{font-size:1.7em;}
+	#post-content i{text-decoration:italic;}
+	#post-content b{font-family:'Railway-Bold';}
+	#post-content hr{margin:2em auto;max-width:400px;height:3px;border:none;border-top:3px solid #0c1b1b;}
+	#post-content code{
+		padding:1px 3px;
+		background:#efefef;
+		border-radius:4px;
+		border:1px solid rgba(101, 99, 99, 0.1);
+	}
+	#post-content blockquote{
+		margin:10px 15px;
+		position:relative;
+		text-align:center;
+	}
+	#post-content blockquote p{
+		display:inline-block;
+		font-family:'Lato-Bold';
+		font-size:2em;
+	}
+	#post-content blockquote:before{
+		content:'"';
+		font-size:3.5em;
+		position:relative;
+		top:10px;
+		left:0;
+		opacity:0.7;
+	}
+	#post-content blockquote:after{
+		content:'"';
+		font-size:3.5em;
+		position:relative;
+		top:10px;
+		right:0;
+		opacity:0.7;
 	}
 	#post-content .featured{
 		padding:0.9em 1em;
