--- a/index.hbs
+++ b/index.hbs
@@ -1,8 +1,13 @@
 {{!< default}}
 {{! index template, this is for home}}
-{{> "loop"}}
+<section id="loop" class="shim">
+  {{> "tt-loop"}}
+  {{#if posts}}
+    {{pagination}}
+  {{/if}}
+</section>
 <script>
-  $offset = $("article.loop").first().outerHeight();
+  $offset = $("article").first().outerHeight();
   $("#site-shim").shimThis({
     ontop: 'section.hero',
     offset: $offset+'px'
