--- a/page.hbs
+++ b/page.hbs
@@ -1,23 +1,2 @@
 {{!< default}}
-{{! page template}}
-{{> "shim"}}
-{{#post}}
-  <section id="post-content">
-    {{content}}
-    <section class="featured">
-      {{#next_post}}
-        <a href="{{url absolute="true"}}"><div class="next">next post</div></a>
-      {{/next_post}}
-      {{#prev_post}}
-        <a href="{{url absolute="true"}}"><div class="prev">previous post</div></a>
-      {{/prev_post}}
-    </section>
-  </section>
-{{/post}}
-<script>
-  $offset = $("#post").outerHeight();
-  $("#site-shim").shimThis({
-    ontop: 'section.hero',
-    offset: $offset+'px'
-  });
-</script>
+{{> "tt-post"}}
