--- a/post.hbs
+++ b/post.hbs
@@ -1,23 +1,5 @@
 {{!< default}}
-{{! post template}}
 {{> "shim"}}
 {{#post}}
-  <section id="post-content">
-    {{content}}
-    <section class="featured">
-      {{#next_post}}
-        <a href="{{url absolute="true"}}"><div class="next">next post</div></a>
-      {{/next_post}}
-      {{#prev_post}}
-        <a href="{{url absolute="true"}}"><div class="prev">previous post</div></a>
-      {{/prev_post}}
-    </section>
-  </section>
+  {{> "tt-post"}}
 {{/post}}
-<script>
-  $offset = $("#post").outerHeight();
-  $("#site-shim").shimThis({
-    ontop: 'section.hero',
-    offset: $offset+'px'
-  });
-</script>
