--- a/tag-notes.hbs
+++ b/tag-notes.hbs
@@ -1,16 +1,13 @@
 {{!< default}}
 {{! tag template}}
-{{#tag}}
-  {{> "shim"}}
-{{/tag}}
-<section id="loop" class="shim">
-  {{> "tt-loop" ommit='!note'}}
+<section id="loop">
+  {{> "tt-loop" show="!note"}}
   {{#if posts}}
     {{pagination}}
   {{/if}}
 </section>
 <script>
-  $offset = $("#tag").outerHeight();
+  $offset = "300";
   $("#site-shim").shimThis({
     ontop: 'section.hero',
     offset: $offset+'px'
